--- a/benchmarks/Makefile
+++ b/benchmarks/Makefile
@@ -45,29 +45,29 @@ $(BUILD_DIR)/NeuromorphicProcessor.cc: NeuromorphicProcessor/testbench.cc $(BUIL
 # build executable simulation of instrumented files with verilator
 $(BUILD_DIR)/NeuromorphicProcessor_baseline.bin: $(BUILD_DIR)/NeuromorphicProcessor_baseline.sv $(BUILD_DIR)/NeuromorphicProcessor.cc
 	cd $(BUILD_DIR) && \
-	 $(VERILATOR) $(notdir $^) --Mdir $(notdir $(basename $@)) -I../NeuromorphicProcessor --top-module NeuromorphicProcessor
-	rm -f $@ && ln -s $(notdir $(basename $@))/VNeuromorphicProcessor $@
+	 $(VERILATOR) $(notdir $^) --Mdir $(notdir $(basename $@)) -I../NeuromorphicProcessor --top-module NeuromorphicProcessor -o sim
+	rm -f $@ && ln -s $(notdir $(basename $@))/sim $@
 
 $(BUILD_DIR)/NeuromorphicProcessor_firrtl_%.bin: $(BUILD_DIR)/NeuromorphicProcessor_firrtl_%.sv $(BUILD_DIR)/NeuromorphicProcessor.cc
 	cd $(BUILD_DIR) && \
-	 $(VERILATOR) $(notdir $^) --Mdir $(notdir $(basename $@)) -I../NeuromorphicProcessor --top-module NeuromorphicProcessor
-	rm -f $@ && ln -s $(notdir $(basename $@))/VNeuromorphicProcessor $@
+	 $(VERILATOR) $(notdir $^) --Mdir $(notdir $(basename $@)) -I../NeuromorphicProcessor --top-module NeuromorphicProcessor -o sim
+	rm -f $@ && ln -s $(notdir $(basename $@))/sim $@
 
 # build the baseline Verilog with native verilator instrumentation for comparison
 $(BUILD_DIR)/NeuromorphicProcessor_native_line.bin: $(BUILD_DIR)/NeuromorphicProcessor_baseline.sv $(BUILD_DIR)/NeuromorphicProcessor.cc
 	cd $(BUILD_DIR) && \
-	 $(VERILATOR) $(notdir $^) --Mdir $(notdir $(basename $@)) -I../NeuromorphicProcessor --top-module NeuromorphicProcessor --coverage-line
-	rm -f $@ && ln -s $(notdir $(basename $@))/VNeuromorphicProcessor $@
+	 $(VERILATOR) $(notdir $^) --Mdir $(notdir $(basename $@)) -I../NeuromorphicProcessor --top-module NeuromorphicProcessor --coverage-line -o sim
+	rm -f $@ && ln -s $(notdir $(basename $@))/sim $@
 
 $(BUILD_DIR)/NeuromorphicProcessor_native_toggle.bin: $(BUILD_DIR)/NeuromorphicProcessor_baseline.sv $(BUILD_DIR)/NeuromorphicProcessor.cc
 	cd $(BUILD_DIR) && \
-	 $(VERILATOR) $(notdir $^) --Mdir $(notdir $(basename $@)) -I../NeuromorphicProcessor --top-module NeuromorphicProcessor --coverage-toggle
-	rm -f $@ && ln -s $(notdir $(basename $@))/VNeuromorphicProcessor $@
+	 $(VERILATOR) $(notdir $^) --Mdir $(notdir $(basename $@)) -I../NeuromorphicProcessor --top-module NeuromorphicProcessor --coverage-toggle -o sim
+	rm -f $@ && ln -s $(notdir $(basename $@))/sim $@
 
 $(BUILD_DIR)/NeuromorphicProcessor_native_all.bin: $(BUILD_DIR)/NeuromorphicProcessor_baseline.sv $(BUILD_DIR)/NeuromorphicProcessor.cc
 	cd $(BUILD_DIR) && \
-	 $(VERILATOR) $(notdir $^) --Mdir $(notdir $(basename $@)) -I../NeuromorphicProcessor --top-module NeuromorphicProcessor --coverage-line --coverage-toggle
-	rm -f $@ && ln -s $(notdir $(basename $@))/VNeuromorphicProcessor $@
+	 $(VERILATOR) $(notdir $^) --Mdir $(notdir $(basename $@)) -I../NeuromorphicProcessor --top-module NeuromorphicProcessor --coverage-line --coverage-toggle -o sim
+	rm -f $@ && ln -s $(notdir $(basename $@))/sim $@
 
 # extract inputs for benchmarking
 $(BUILD_DIR)/NeuromorphicProcessor_inputs.txt: NeuromorphicProcessor/inputs.txt.gz $(BUILD_DIR)
@@ -75,8 +75,66 @@ $(BUILD_DIR)/NeuromorphicProcessor_inputs.txt: NeuromorphicProcessor/inputs.txt.
 	mv NeuromorphicProcessor/inputs.txt $@
 
 # pseudo target to compile all binaries
-NeuromorphicProcessor_all_bin: $(addsuffix .bin, $(addprefix $(BUILD_DIR)/NeuromorphicProcessor_, $(BENCH_OPTS)))
+NeuromorphicProcessor_all_bin: $(addsuffix .bin, $(addprefix $(BUILD_DIR)/NeuromorphicProcessor_, $(BENCH_OPTS))) $(BUILD_DIR)/NeuromorphicProcessor_inputs.txt
 	echo "done"
+
+
+
+#### TL-RAM Benchmark
+
+# different coverage instrumentation
+$(BUILD_DIR)/TLRAM_baseline.sv: TLRAM/TLRAMStandalone.fir $(firrtl_jar) $(BUILD_DIR)
+	$(firrtl_bin) -i $< -E sverilog -o $@
+
+$(BUILD_DIR)/TLRAM_firrtl_line.sv: TLRAM/TLRAMStandalone.fir $(firrtl_jar) $(BUILD_DIR)
+	$(firrtl_bin) -i $< -E sverilog $(LINE_COV) -o $@
+
+$(BUILD_DIR)/TLRAM_firrtl_toggle.sv: TLRAM/TLRAMStandalone.fir $(firrtl_jar) $(BUILD_DIR)
+	$(firrtl_bin) -i $< -E sverilog $(TOGGLE_COV) -o $@
+
+$(BUILD_DIR)/TLRAM_firrtl_all.sv: TLRAM/TLRAMStandalone.fir $(firrtl_jar) $(BUILD_DIR)
+	$(firrtl_bin) -i $< -E sverilog $(ALL_COV) -o $@
+
+# copy over testbench file (somehow verilator has trouble with input files in different directories)
+$(BUILD_DIR)/TLRAM.cc: TLRAM/TLRAMStandalone.cpp $(BUILD_DIR)
+	cp $< $@
+
+# build executable simulation of instrumented files with verilator
+$(BUILD_DIR)/TLRAM_baseline.bin: $(BUILD_DIR)/TLRAM_baseline.sv $(BUILD_DIR)/TLRAM.cc
+	cd $(BUILD_DIR) && \
+	 $(VERILATOR) $(notdir $^) --Mdir $(notdir $(basename $@)) -I../TLRAM --top-module TLRAMStandalone -o sim
+	rm -f $@ && ln -s $(notdir $(basename $@))/sim $@
+
+$(BUILD_DIR)/TLRAM_firrtl_%.bin: $(BUILD_DIR)/TLRAM_firrtl_%.sv $(BUILD_DIR)/TLRAM.cc
+	cd $(BUILD_DIR) && \
+	 $(VERILATOR) $(notdir $^) --Mdir $(notdir $(basename $@)) -I../TLRAM --top-module TLRAMStandalone -o sim
+	rm -f $@ && ln -s $(notdir $(basename $@))/sim $@
+
+# build the baseline Verilog with native verilator instrumentation for comparison
+$(BUILD_DIR)/TLRAM_native_line.bin: $(BUILD_DIR)/TLRAM_baseline.sv $(BUILD_DIR)/TLRAM.cc
+	cd $(BUILD_DIR) && \
+	 $(VERILATOR) $(notdir $^) --Mdir $(notdir $(basename $@)) -I../TLRAM --top-module TLRAMStandalone --coverage-line -o sim
+	rm -f $@ && ln -s $(notdir $(basename $@))/sim $@
+
+$(BUILD_DIR)/TLRAM_native_toggle.bin: $(BUILD_DIR)/TLRAM_baseline.sv $(BUILD_DIR)/TLRAM.cc
+	cd $(BUILD_DIR) && \
+	 $(VERILATOR) $(notdir $^) --Mdir $(notdir $(basename $@)) -I../TLRAM --top-module TLRAMStandalone --coverage-toggle -o sim
+	rm -f $@ && ln -s $(notdir $(basename $@))/sim $@
+
+$(BUILD_DIR)/TLRAM_native_all.bin: $(BUILD_DIR)/TLRAM_baseline.sv $(BUILD_DIR)/TLRAM.cc
+	cd $(BUILD_DIR) && \
+	 $(VERILATOR) $(notdir $^) --Mdir $(notdir $(basename $@)) -I../TLRAM --top-module TLRAMStandalone --coverage-line --coverage-toggle -o sim
+	rm -f $@ && ln -s $(notdir $(basename $@))/sim $@
+
+# extract inputs for benchmarking
+$(BUILD_DIR)/TLRAM_inputs.txt: TLRAM/inputs.txt.gz $(BUILD_DIR)
+	gzip -dk $<
+	mv TLRAM/inputs.txt $@
+
+# pseudo target to compile all binaries
+TLRAM_all_bin: $(addsuffix .bin, $(addprefix $(BUILD_DIR)/TLRAM_, $(BENCH_OPTS))) $(BUILD_DIR)/TLRAM_inputs.txt
+	echo "done"
+
 
 ############ Benchmarking with Hyperfine
 # # https://stackoverflow.com/questions/5618615/check-if-a-program-exists-from-a-makefile
@@ -91,5 +149,12 @@ endif
 	hyperfine --warmup 1 --max-runs 100 --export-csv $(notdir $@) $(addprefix ./, $(filter %.bin, $(notdir $^)))
 
 
+# run once for a quick test
+%_run_once: $(addsuffix .bin, $(addprefix $(BUILD_DIR)/%_, $(BENCH_OPTS))) $(BUILD_DIR)/%_inputs.txt
+ifndef HYPERFINE
+	$(error "install hyperfine: https://github.com/sharkdp/hyperfine")
+endif
+	cd $(BUILD_DIR) && \
+	hyperfine --warmup 0 --max-runs 1 $(addprefix ./, $(filter %.bin, $(notdir $^)))
 
-.PHONY: firrtl clean NeuromorphicProcessor_all_bin
+.PHONY: firrtl clean NeuromorphicProcessor_all_bin TLRAM_all_bin
