--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,6 +48,10 @@ jobs:
         uses: actions/checkout@v3
       - name: Install Verilator Build Dependencies
         run: sudo apt-get install -y git make autoconf g++ flex bison libfl2 libfl-dev
+      - name: Install hyperfine # https://github.com/sharkdp/hyperfine#on-ubuntu
+        run: |
+          wget https://github.com/sharkdp/hyperfine/releases/download/v1.15.0/hyperfine_1.15.0_amd64.deb
+          sudo dpkg -i hyperfine_1.15.0_amd64.deb
       - name: Cache Verilator ${{ matrix.version }}
         uses: actions/cache@v3
         id: cache-verilator
